chore: Minor code changes for Java 11