@@ -42,7 +42,7 @@ class YamlFoldParserTest {
 
 		Assertions.assertEquals(2, folds.size());
 
-		Fold firstFold = folds.get(0);
+		Fold firstFold = folds.getFirst();
 		Assertions.assertEquals(FoldType.CODE, firstFold.getFoldType());
 		Assertions.assertEquals(0, firstFold.getStartOffset());
 		Assertions.assertEquals(code.indexOf("Item"), firstFold.getEndOffset());
